--- a/index.html
+++ b/index.html
@@ -15,6 +15,43 @@
   </style>
 </head>
 <body>
+  <header>Tipper</header>
+  <main id="app">
+    <section>
+      <div class="fieldset bill-block">
+        <label for="bill">Bill</label>
+        <input type="number" id="bill" min="0" max="20"/>
+      </div>
+      <div class="tip-block">
+        <div id="five"></div>
+        <div id="ten"></div>
+        <div id="fifteen"></div>
+        <div id="twenty_five"></div>
+        <div id="fifty"></div>
+        <input id="custom" type="number" min="1" max="100" />
+      </div>
+      <div class="fieldset people-block">
+        <label for="people">Number of People</label>
+        <input type="number" id="people" min="0" max="100" />
+      </div>
+    </section>
+  
+    <section>
+      <div class="tip-row">
+        <span>Tip Amount <br> / person </span>
+        <span id="tip_person">$0.00</span>
+      </div>
+  
+      <div class="total-row">
+        <span>Total <br> / person </span>
+        <span id="total_person">$0.00</span>
+      </div>
+  
+      <button id="reset">reset</button>
+    </section>
+  </main>
+
+  
 
   Bill
 
