--- a/index.html
+++ b/index.html
@@ -3,32 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Tip calculator app</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+
   </style>
 </head>
 <body>
-  <header>Tipper</header>
+  <header>Tip<br>per</header>
   <main id="app">
-    <section>
+    <section class="left-col">
       <div class="fieldset bill-block">
         <label for="bill">Bill</label>
-        <input type="number" id="bill" min="0" max="20"/>
+        <input type="number" id="bill" min="0" max="20" placeholder="$"/>
       </div>
       <div class="tip-block">
-        <div id="five"></div>
-        <div id="ten"></div>
-        <div id="fifteen"></div>
-        <div id="twenty_five"></div>
-        <div id="fifty"></div>
-        <input id="custom" type="number" min="1" max="100" />
+        <label for="custom">Select Tip %</label>
+        <div class="tip-category">
+            <div id="five">5%</div>
+            <div id="ten">10%</div>
+            <div id="fifteen">15%</div>
+            <div id="twenty_five">25%</div>
+            <div id="fifty">50%</div>
+            <input id="custom" type="number" min="1" max="100" placeholder="Custom"/>
+        </div>
       </div>
       <div class="fieldset people-block">
         <label for="people">Number of People</label>
@@ -36,7 +40,7 @@
       </div>
     </section>
   
-    <section>
+    <section class="right-col">
       <div class="tip-row">
         <span>Tip Amount <br> / person </span>
         <span id="tip_person">$0.00</span>
@@ -50,32 +54,10 @@
       <button id="reset">reset</button>
     </section>
   </main>
-
   
-
-  Bill
-
-  Select Tip %
-  5%
-  10%
-  15%
-  25%
-  50%
-  Custom
-
-  Number of People
-
-  Tip Amount
-  / person
-
-  Total
-  / person
-
-  Reset
-  
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </footer>
 </body>
 </html>
