--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
       <div class="tip-block">
         <label for="custom">Select Tip %</label>
         <div class="tip-category">
-            <div id="five">5%</div>
-            <div id="ten">10%</div>
-            <div id="fifteen">15%</div>
-            <div id="twenty_five">25%</div>
-            <div id="fifty">50%</div>
+            <div id="five" data-number=5>5%</div>
+            <div id="ten" data-number=10>10%</div>
+            <div id="fifteen" data-number=15>15%</div>
+            <div id="twenty_five" data-number=25>25%</div>
+            <div id="fifty"data-number=50>50%</div>
             <input id="custom" type="number" min="1" max="100" placeholder="Custom"/>
         </div>
       </div>
