--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/omeizahanif" target="_blank">Hanif</a>.
   </footer>
 
   <script type="module" src="index.js"></script>
